{{$NEXT}}

0.01_1    2014-06-05 12:21:10+01:00 Europe/London
 - first release
 - requires Perl 5.10
 - will work with IO::Async and Net::Async::HTTP, or with plain
   LWP::UserAgent