@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - correctly handle connection failures
 
 0.01_1    2014-06-05 12:21:10+01:00 Europe/London
  - first release
